@@ -94,7 +94,7 @@ if platform.system() == "Windows":
 	zlib_dll_file = os.path.join(library_directory, "zlib.dll")
 
 	# Add the library DLL and zlib.dll files to the distribution.
-	LIBRARY_DATA_FILES.append((sysconfig.get_python_lib(True), [library_dll_file, zlib_dll_file])) 
+	LIBRARY_DATA_FILES.append((sysconfig.get_python_lib(True), [library_dll_file, zlib_dll_file]))
 
 else:
 	DEFINE_MACROS = [
