@@ -18,6 +18,9 @@ Tools:
   - fix volume size hints
   - create compatible dokan lib
 
+20131020
+* updated libcstring
+
 20131013
 * updated dependencies
 
